--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/library
     username: postgres
-    password: root
+    password: postgres
     driver-class-name: org.postgresql.Driver
   jpa:
     database: postgresql
@@ -16,3 +16,5 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
+  freemarker:
+    expose-request-attributes: true
